--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,3 +8,132 @@ body {
       color: black;
     }
   }
+
+#navItem {
+    line-height: 56px;
+}
+.wrapper {
+ display:block;
+ overflow:hidden;
+ position:relative;
+ width:100%
+}
+.wrapper .container {
+ max-width:80rem
+}
+.wrapper>.container {
+ padding-bottom:7.5rem;
+ padding-top:7.5rem
+}
+.header {
+ background-color:#f4f5f6;
+ padding-top:1rem
+}
+@media(min-width:40rem) {
+ .header {
+  padding-top:5rem
+ }
+}
+.header+section {
+ border-top:0
+}
+.header .container {
+ border-top:0;
+ padding-bottom:7.5rem;
+ padding-top:7.5rem;
+ position:relative;
+ text-align:center
+}
+.header .title {
+ font-family:Gotham Rounded A,Gotham Rounded B,Helvetica Neue,Arial,sans-serif
+}
+.header .img {
+ height:15rem;
+ margin-bottom:2rem
+}
+.header .img path {
+ animation:7s a forwards;
+ fill:#9b4dca;
+ stroke:#9b4dca;
+ stroke-dasharray:38321;
+ stroke-miterlimit:10;
+ stroke-width:15px
+}
+.header .button {
+ margin-bottom:4rem;
+ margin-top:2rem
+}
+@media(min-width:40rem) {
+ .header .button {
+  margin-bottom:4rem;
+  margin-top:2rem
+ }
+}
+.navigation {
+ background:#000000;
+ border-bottom:.1rem solid #9b4dca;
+ display:block;
+ height:5.2rem;
+ left:0;
+ max-width:100%;
+ position:fixed;
+ right:0;
+ top:0;
+ width:100%;
+ z-index:2
+}
+.navigation .container {
+ padding-bottom:0;
+ padding-top:0
+}
+.navigation .navigation-list {
+ list-style:none;
+ margin-bottom:0;
+ margin-right:5rem
+}
+@media(min-width:80rem) {
+ .navigation .navigation-list {
+  margin-right:0
+ }
+}
+.navigation .navigation-item {
+ float:left;
+ margin-bottom:0;
+ margin-left:2.5rem;
+ position:relative
+}
+.navigation .img {
+ fill:#9b4dca;
+ height:2rem;
+ position:relative;
+ top:.3rem
+}
+.navigation .navigation-title,
+.navigation .title {
+ color:#606c76;
+ font-family:Gotham Rounded A,Gotham Rounded B,Helvetica Neue,Arial,sans-serif;
+ position:relative
+}
+.navigation .navigation-link,
+.navigation .navigation-title,
+.navigation .title {
+ display:inline;
+ font-size:1.6rem;
+ line-height:5.2rem;
+ padding:0;
+ text-decoration:none
+}
+.navigation .navigation-link.active {
+ color:#606c76
+}
+.octocat {
+ border:0;
+ color:#f4f5f6;
+ fill:#9b4dca;
+ height:5.2rem;
+ position:fixed;
+ right:0;
+ top:0;
+ width:5.2rem;
+ z-index:2
+}
