--- a/misc/probe-tracker/stylesheet.css
+++ b/misc/probe-tracker/stylesheet.css
@@ -140,6 +140,24 @@ nav {
  z-index:2
 }
 
+dt:nth-child(2n) {
+  background-color: rgb(26, 26, 26);
+}
+
+dt {
+  padding-top: 25px;
+  padding-bottom: 50px;
+}
+
+p {
+  padding-left: 10px;
+}
+
+button {
+  margin-right: 20px;
+}
+
+
 
 @media screen and (prefers-color-scheme: light) {
   body {
@@ -154,5 +172,9 @@ nav {
 
   .navigation {
     background: #f4f5f6;
+  }
+
+  dt:nth-child(2n) {
+    background-color: rgb(226, 226, 226);
   }
 }
