--- a/misc/probe-tracker/stylesheet.css
+++ b/misc/probe-tracker/stylesheet.css
@@ -159,16 +159,19 @@ dt:nth-child(2n) {
 }
 
 dt {
-  padding-top: 25px;
-  padding-bottom: 50px;
+  padding-top: 1rem;
+  padding-bottom: 5rem;
+  margin: 0px 0px 0px 0px;
 }
 
 p {
-  padding-left: 10px;
+  padding: 0.5rem 0px 0px 1rem;
+  margin: 0px 0px 2.5rem 0px
 }
 
-button {
-  margin-right: 20px;
+.button {
+  margin: 0px 2rem 1rem 0px;
+  padding: 0px 1rem 0px 1rem;
 }
 
 @media screen and (max-width: 460px) {
