--- a/misc/probe-tracker/stylesheet.css
+++ b/misc/probe-tracker/stylesheet.css
@@ -172,6 +172,7 @@ p {
 .button {
   margin: 0px 1rem 1rem 0px;
   padding: 0px 1rem 0px 1rem;
+  font-size: 1.2rem;
 }
 
 @media screen and (max-width: 460px) {
